--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
     box-sizing: border-box;
 }
 
+.avatar {
+    width: 150px; 
+    height: auto; 
+    border-radius: 50%; 
+    display: block; 
+    margin: 0 auto 20px; 
+}
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
